--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -75,7 +75,7 @@ footer.bg-dark {
 
 .sidebar {
   height: 100vh;
-  width: 280px; /* ajusta según tus preferencias */
+  width: 280px;
   padding: 0;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   overflow-x: hidden;
@@ -85,11 +85,12 @@ footer.bg-dark {
 }
 
 .main-content {
-  margin-left: 200px; /* ajusta según el ancho de tu sidebar */
+  margin-left: 200px; 
 }
 
 .sidebar .sidebar-inner {
   padding: 20px;
+  text-decoration: none; /* remove underline */
 }
 
 .sidebar .sidebar-menu {
@@ -116,11 +117,6 @@ footer.bg-dark {
   /*... */
   text-decoration: none; /* remove underline on hover */
   color: #000; /* set the color to black */
-}
-
-.sidebar .sidebar-menu-item.active a {
-  background-color: rgba(255, 255, 255, 0.2);
-  color: #000;
 }
 
 .sidebar .sidebar-menu-item i {
@@ -207,10 +203,18 @@ a:hover {
   height: 1.5rem;
 }
 
+a {
+  text-decoration: none!important; /* Quita el subrayado de todos los enlaces */
+}
+
+.select2 {
+  width: 100%;
+}
+
 /*--------------------------fin------------------------*/
 @media (max-width: 958px) {
   .sidebar {
-    width: 150px;
+    width: 170px;
     left: 0;
   }
   .main-content {
