--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -230,3 +230,22 @@ a {
     margin-left: auto; /* push the icon to the right */
   }
 }
+
+@media (max-width: 1358px) {
+  .sidebar {
+    width: 220px;
+    left: 0;
+  }
+  .main-content {
+    margin-left: 180px;
+  }
+  .sidebar-logo {
+    margin-bottom: 30px;
+  }
+  .sidebar-menu {
+    font-size: 1rem;
+  }
+  .submenu-toggle {
+    margin-left: auto; /* push the icon to the right */
+  }
+}
