--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -212,40 +212,72 @@ a {
 }
 
 /*--------------------------fin------------------------*/
-@media (max-width: 958px) {
+
+/*----Mitad de 2133.33--*/
+@media (max-width: 1065px) {
   .sidebar {
-    width: 170px;
+    width: 120px;
     left: 0;
   }
+
+  .sidebar-menu-item a .menu-text {
+    display: none;
+  }
+  .sidebar-menu-item a i.fa-solid {
+    display: inline-block;
+  }
+
+  .sidebar-submenu > li > a {
+    font-size: 0px;
+  }
+
+  .sidebar-submenu {
+    padding-left: 0px;
+    list-style: none; 
+  }
+  
   .main-content {
     margin-left: 150px;
-  }
-  .sidebar-logo {
-    margin-bottom: 20px;
   }
   .sidebar-menu {
     font-size: 0.8rem;
   }
   .submenu-toggle {
-    margin-left: auto; /* push the icon to the right */
+    margin-left: auto;
   }
 }
-/*
-@media (max-width: 1358px) {
+
+/*-----------1358 es pantalla completa en la laptop------*/
+@media (mix-width: 1066px) and (max-width: 1358px) {
   .sidebar {
-    width: 220px;
+    width: 120px;
     left: 0;
   }
-  .main-content {
-    margin-left: 180px;
+
+  .sidebar-menu-item a .menu-text {
+    display: none;
   }
-  .sidebar-logo {
-    margin-bottom: 30px;
+  .sidebar-menu-item a i.fa-solid {
+    display: inline-block;
+  }
+
+  .sidebar-submenu > li > a {
+    font-size: 0px;
+  }
+
+  .sidebar-submenu {
+    padding-left: 0px;
+    list-style: none; 
+  }
+  
+  .main-content {
+    margin-left: 150px;
   }
   .sidebar-menu {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
   .submenu-toggle {
-    margin-left: auto; /* push the icon to the right */
-  
+    margin-left: auto;
+  }
+}
 
